--- a/agents-docs/content/docs/self-hosting/vercel.mdx
+++ b/agents-docs/content/docs/self-hosting/vercel.mdx
@@ -4,46 +4,28 @@ description: Deploy the Inkeep Agent Framework to Vercel
 icon: "LuRocket"
 ---
 
-### Prerequisites
+### Step 1: Create a GitHub repository for your project
 
-Sign up for a cloud hosted deployment for these services.
+If you do not have an Inkeep project already, [follow these steps](/quick-start/start-development) to create one. Then push your project to a reposistory on GitHub.
 
-1. [**Turso on Vercel Marketplace**](https://vercel.com/marketplace/tursocloud) or directly at [**Turso Cloud**](https://app.turso.tech/)
+### Step 2: Create a Turso Database
+
+Create a Turso database on [**Vercel Marketplace**](https://vercel.com/marketplace/tursocloud) or directly at [**Turso Cloud**](https://app.turso.tech/).
+
+### Step 3: Save your Turso Database URL and Auth Token
+
+Create a token for your database, and then save the URL and token created.
+
 ```
 TURSO_DATABASE_URL=
 TURSO_AUTH_TOKEN=
 ```
 
-2. [**SigNoz**](https://signoz.io/)
+### Step 4: Create a Vercel account
 
-Follow these instructions on getting started with [SigNoz Cloud](/quick-start/observability#option-1-signoz-cloud-setup).
-```
-SIGNOZ_URL=
-SIGNOZ_API_KEY=
+Sign up for a Vercel account [here](https://vercel.com/signup).
 
-OTEL_EXPORTER_OTLP_TRACES_ENDPOINT=https://ingest.us.signoz.cloud:443/v1/traces
-OTEL_EXPORTER_OTLP_TRACES_HEADERS=signoz-ingestion-key=<your-ingestion-key>
-```
-
-3. [**Nango**](https://www.nango.dev/)
-
-Follow these instructions on getting started with [Nango Cloud](/quick-start/credentials#option-1-nango-cloud-setup).
-```
-NANGO_SECRET_KEY=
-```
-
-### Create a GitHub repo with your project
-
-[Follow these steps in the docs](/quick-start/start-development) with the `npx @inkeep/create-agents` CLI command to create a project.
-
-Then push your reposistory to GitHub.
-
-## Create Vercel projects for each service
-
-From the monorepo in GitHub, you will create three seperate projects in Vercel.
-
-### 1. Manage API
-Generate a secret using `openssl rand -hex 32` in a terminal. Keep this secret and note this for `INKEEP_AGENTS_MANAGE_API_BYPASS_SECRET`.
+### Step 5: Create a Vercel project for Manage API
 
 ![Vercel New Project - Manage API](/images/vercel-new-project-manage-api-hono.png)
 <Note>
@@ -63,8 +45,16 @@ NANGO_SECRET_KEY=
 NANGO_SERVER_URL=https://api.nango.dev
 ```
 
-### 2. Run API
-Generate another secret using `openssl rand -hex 32` in a terminal. Keep this secret and note this for `INKEEP_AGENTS_RUN_API_BYPASS_SECRET`.
+| Environment Variable            | Value                                                                                                                                                             |
+| -------------------- | ----------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
+| `ENVIRONMENT`                      | `production`                                                                                                                                                                            |
+| `INKEEP_AGENTS_MANAGE_API_BYPASS_SECRET`              | Run `openssl rand -hex 32` in your terminal to generate this value. Save this value for `INKEEP_AGENTS_MANAGE_API_BYPASS_SECRET` in Step 7.                                                                                                                                       |
+| `TURSO_DATABASE_URL`          | Turso database URL you saved from Step 3                                                                                                                                                                            |
+| `TURSO_AUTH_TOKEN`     | Turso auth token you saved from Step 3                                                                                                                                                                               |
+| `NANGO_SECRET_KEY`     | Nango secret key from your [Nango cloud account](/quick-start/credentials#option-1-nango-cloud-setup). Note: Local Nango setup won't work with Vercel deployments.                                                                                                                                                                               |
+| `NANGO_SERVER_URL`     | `https://api.nango.dev`                                                                                                                                                                               |
+
+### Step 6: Create a Vercel project for Run API
 
 ![Vercel New Project - Run API](/images/vercel-new-project-run-api-hono.png)
 <Note>
@@ -91,9 +81,21 @@ NANGO_SECRET_KEY=
 NANGO_SERVER_URL=https://api.nango.dev
 ```
 
-### 3. Manage UI
+| Environment Variable            | Value                                                                                                                                                             |
+| -------------------- | ----------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
+| `ENVIRONMENT`                      | `production`                                                                                                                                                                            |
+| `ANTHROPIC_API_KEY`     | Your Anthropic API key                                                                                                                                                                               |
+| `OPENAI_API_KEY`     | Your OpenAI API key                                                                                                                                                                               |
+| `GOOGLE_GENERATIVE_AI_API_KEY`     | Your Google Gemini API key                                                                                                                                                                               |
+| `INKEEP_AGENTS_RUN_API_BYPASS_SECRET`              | Run `openssl rand -hex 32` in your terminal to generate this value. Save this value for `INKEEP_AGENTS_RUN_API_BYPASS_SECRET` in Step 7.                                                                                                                                       |
+| `TURSO_DATABASE_URL`          | Turso database URL you saved from Step 3                                                                                                                                                                            |
+| `TURSO_AUTH_TOKEN`     | Turso auth token you saved from Step 3                                                                                                                                                                               |
+| `NANGO_SECRET_KEY`     | Nango secret key from your [Nango cloud account](/quick-start/credentials#option-1-nango-cloud-setup). Note: Local Nango setup won't work with Vercel deployments.                                                                                                                                                                               |
+| `OTEL_EXPORTER_OTLP_TRACES_ENDPOINT`     | `https://ingest.us.signoz.cloud:443/v1/traces`                                                                                                                                                                               |
+| `OTEL_EXPORTER_OTLP_TRACES_HEADERS`     | `signoz-ingestion-key=<your-ingestion-key>`. Use the instructions from [SigNoz Cloud Setup](/quick-start/observability#option-1-signoz-cloud-setup) to configure your ingestion key. Note: Local SigNoz setup won't work with Vercel deployments.                                                                                                                                                                             |
+| `NANGO_SERVER_URL`     | `https://api.nango.dev`                                                                                                                                                                               |
 
-After you have deployed (1) Manage API and (2) Run API, you will have a Vercel deployment url for both of them. These will be `INKEEP_AGENTS_MANAGE_API_URL` and `INKEEP_AGENTS_RUN_API_URL`.
+### Step 7: Create a Vercel project for Manage UI
 
 ![Vercel New Project - Manage UI](/images/vercel-new-project-manage-ui-nextjs.png)
 <Note>
@@ -110,11 +112,28 @@ INKEEP_AGENTS_RUN_API_URL=
 INKEEP_AGENTS_MANAGE_API_BYPASS_SECRET=
 INKEEP_AGENTS_RUN_API_BYPASS_SECRET=
 
-SIGNOZ_URL=
+SIGNOZ_URL=https://<your-organization>.signoz.cloud
 SIGNOZ_API_KEY=
 
 NANGO_SECRET_KEY=
 NANGO_SERVER_URL=https://api.nango.dev
 ```
+
+| Environment Variable            | Value                                                                                                                                                             |
+| -------------------- | ----------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
+| `ENVIRONMENT`                      | `production`                                                                                                                                                                            |
+| `INKEEP_AGENTS_MANAGE_API_URL`          | Your Vercel deployment URL for Manage API                                                                                                                                                                            |
+| `INKEEP_AGENTS_RUN_API_URL`          | Your Vercel deployment URL for Run API                                                                                                                                                                            |
+| `INKEEP_AGENTS_MANAGE_API_BYPASS_SECRET`              | Your generated Manage API bypass secret from Step 5                                                                                                                                       |
+| `INKEEP_AGENTS_RUN_API_BYPASS_SECRET`              | Your generated Run API bypass secret from Step 6                                                                                                                                       |
+| `SIGNOZ_URL`          |  Use the instructions from [SigNoz Cloud Setup](/quick-start/observability#option-1-signoz-cloud-setup) to configure your SigNoz URL. Note: Local SigNoz setup won't work with Vercel deployments.                                                                                                                                                                                                                                                                                                                                    |
+| `SIGNOZ_API_KEY`          |  Use the instructions from [SigNoz Cloud Setup](/quick-start/observability#option-1-signoz-cloud-setup) to configure your SigNoz API key. Note: Local SigNoz setup won't work with Vercel deployments.                                                                                                                                                                                                                                                                                                                                    |
+| `NANGO_SECRET_KEY`          | Nango secret key from your [Nango cloud account](/quick-start/credentials#option-1-nango-cloud-setup). Note: Local Nango setup won't work with Vercel deployments.                                                                                                                                                                                                                                                                                                                                                       |
+| `NANGO_SERVER_URL`          | `https://api.nango.dev`                                                                                                                                                                            |
+
+
+### Step 8: Enable Vercel Authentication
+
+To prevent anyone from being able to access the UI, we recommend enabling Vercel authentication for all deployments: **Settings > Deployment Protection > Vercel Authentication > All Deployments**.
 
 ## Push your graph
