--- a/agents-docs/_snippets/auth/RunApiAuthModes.mdx
+++ b/agents-docs/_snippets/auth/RunApiAuthModes.mdx
@@ -3,17 +3,17 @@
 Choose the authentication method:
 
 <Tabs>
-<Tab title="Using Graph API Key">
+<Tab title="Using an API Key">
 
-**Create a Graph API Key:**
+**Create an API Key:**
 1. Open the Visual Builder Dashboard
-2. Go to your Project → **Graph API Keys**
+2. Go to your Project → **API Keys**
 3. Click **Create**, select the target agent graph
 4. Copy the API key (it will be shown once) and store it securely
 
 **Request Header:**
 ```http
-Authorization: Bearer <graph_api_key>
+Authorization: Bearer <api_key>
 ```
 </Tab>
 
