--- a/agents-docs/content/docs/visual-builder/artifact-components.mdx
+++ b/agents-docs/content/docs/visual-builder/artifact-components.mdx
@@ -9,7 +9,7 @@ icon: "TbInputSpark"
 ## How to create an artifact component
 
 1. Go to the Artifact Components tab in the left sidebar. Then select "New artifact component".
-2. Add in an id, name, description, and enter in a JSON schema for both summary props and full props. These are required fields.
+2. Add in an id, name, and description (required fields). Optionally, enter JSON schemas for summary props and full props to define structured data extraction. If no schemas are provided, the entire response will be saved as a single piece of data.
 3. Click "Submit".
 
 To visually add the artifact component to the graph, see the [Graphs](/visual-builder/graphs#adding-artifact-components) page for details.
