updates to docs

--- a/agents-docs/content/docs/quick-start/observability.mdx
+++ b/agents-docs/content/docs/quick-start/observability.mdx
@@ -26,11 +26,13 @@ You'll need to collect three pieces of information from your SigNoz dashboard:
 
 1. **API Key**: 
    - Navigate to Settings → Workspace Settings → API Keys → New Key
+   - Choose any role (Admin, Editor, or Viewer) - Viewer is sufficient for observability
    - Set the expiration field to "No Expiry" to prevent the key from expiring
    - Copy the generated API key
 
 2. **Ingestion Key**:
    - Navigate to Settings → Workspace Settings → Ingestion
+   - Set the expiration field to "No Expiry" to prevent the key from expiring
    - Copy the ingestion key
 
 3. **SigNoz URL**:
@@ -117,7 +119,8 @@ To get your SigNoz API key:
 
 1. Open SigNoz at `http://localhost:3080`
 2. Navigate to Settings → Account Settings → API Keys → New Key
-3. Create a new API key or copy an existing one. 
+3. Create a new API key or copy an existing one.
+   - Choose any role (Admin, Editor, or Viewer) - Viewer is sufficient for observability
    - Set the expiration field to "No Expiry" to prevent the key from expiring
 
 ### Step 5: Verify Setup
