--- a/agents-docs/content/docs/quick-start/start-development.mdx
+++ b/agents-docs/content/docs/quick-start/start-development.mdx
@@ -43,4 +43,4 @@ inkeep push
 
 Open the Visual Builder at http://localhost:3000, click into the weather graph, and then click the "Try It" button to start chatting with the agent.
 
-Next, we recommend setting up observability to see live traces of your agent. See [Observability](/quick-start/observability) for more information.
+Next, we recommend setting up observability to see live traces of your agent. See [Traces](/quick-start/traces) for more information.
