--- a/agents-docs/content/docs/self-hosting/vercel.mdx
+++ b/agents-docs/content/docs/self-hosting/vercel.mdx
@@ -92,7 +92,7 @@ NANGO_SERVER_URL=https://api.nango.dev
 | `TURSO_AUTH_TOKEN`     | Turso auth token you saved from Step 3                                                                                                                                                                               |
 | `NANGO_SECRET_KEY`     | Nango secret key from your [Nango cloud account](/quick-start/credentials#option-1-nango-cloud-setup). Note: Local Nango setup won't work with Vercel deployments.                                                                                                                                                                               |
 | `OTEL_EXPORTER_OTLP_TRACES_ENDPOINT`     | `https://ingest.us.signoz.cloud:443/v1/traces`                                                                                                                                                                               |
-| `OTEL_EXPORTER_OTLP_TRACES_HEADERS`     | `signoz-ingestion-key=<your-ingestion-key>`. Use the instructions from [SigNoz Cloud Setup](/quick-start/observability#option-1-signoz-cloud-setup) to configure your ingestion key. Note: Local SigNoz setup won't work with Vercel deployments.                                                                                                                                                                             |
+| `OTEL_EXPORTER_OTLP_TRACES_HEADERS`     | `signoz-ingestion-key=<your-ingestion-key>`. Use the instructions from [SigNoz Cloud Setup](/quick-start/traces#option-1-signoz-cloud-setup) to configure your ingestion key. Note: Local SigNoz setup won't work with Vercel deployments.                                                                                                                                                                             |
 | `NANGO_SERVER_URL`     | `https://api.nango.dev`                                                                                                                                                                               |
 
 ### Step 7: Create a Vercel project for Manage UI
@@ -126,8 +126,8 @@ NANGO_SERVER_URL=https://api.nango.dev
 | `INKEEP_AGENTS_RUN_API_URL`          | Your Vercel deployment URL for Run API                                                                                                                                                                            |
 | `INKEEP_AGENTS_MANAGE_API_BYPASS_SECRET`              | Your generated Manage API bypass secret from Step 5                                                                                                                                       |
 | `INKEEP_AGENTS_RUN_API_BYPASS_SECRET`              | Your generated Run API bypass secret from Step 6                                                                                                                                       |
-| `SIGNOZ_URL`          |  Use the instructions from [SigNoz Cloud Setup](/quick-start/observability#option-1-signoz-cloud-setup) to configure your SigNoz URL. Note: Local SigNoz setup won't work with Vercel deployments.                                                                                                                                                                                                                                                                                                                                    |
-| `SIGNOZ_API_KEY`          |  Use the instructions from [SigNoz Cloud Setup](/quick-start/observability#option-1-signoz-cloud-setup) to configure your SigNoz API key. Note: Local SigNoz setup won't work with Vercel deployments.                                                                                                                                                                                                                                                                                                                                    |
+| `SIGNOZ_URL`          |  Use the instructions from [SigNoz Cloud Setup](/quick-start/traces#option-1-signoz-cloud-setup) to configure your SigNoz URL. Note: Local SigNoz setup won't work with Vercel deployments.                                                                                                                                                                                                                                                                                                                                    |
+| `SIGNOZ_API_KEY`          |  Use the instructions from [SigNoz Cloud Setup](/quick-start/traces#option-1-signoz-cloud-setup) to configure your SigNoz API key. Note: Local SigNoz setup won't work with Vercel deployments.                                                                                                                                                                                                                                                                                                                                    |
 | `NANGO_SECRET_KEY`          | Nango secret key from your [Nango cloud account](/quick-start/credentials#option-1-nango-cloud-setup). Note: Local Nango setup won't work with Vercel deployments.                                                                                                                                                                                                                                                                                                                                                       |
 | `NANGO_SERVER_URL`          | `https://api.nango.dev`                                                                                                                                                                            |
 
