--- a/agents-docs/content/docs/typescript-sdk/signoz-usage.mdx
+++ b/agents-docs/content/docs/typescript-sdk/signoz-usage.mdx
@@ -9,7 +9,7 @@ icon: "brand/Signoz"
 SigNoz is a full-stack observability platform that provides distributed tracing so that you can track requests across multiple agents and services.
 
 ### Quick Start
-Before using SigNoz, ensure it's properly set up and running. For setup instructions, see the [Quick Start](/quick-start/observability) guide. 
+Before using SigNoz, ensure it's properly set up and running. For setup instructions, see the [Quick Start](/quick-start/traces) guide. 
 
 
 ## Using SigNoz UI
