fix duplicate links

--- a/agents-docs/content/docs/talk-to-your-agents/overview.mdx
+++ b/agents-docs/content/docs/talk-to-your-agents/overview.mdx
@@ -1,5 +1,5 @@
 ---
-title: Overview
+title: Overview | Talk to Your Agents
 description: Learn how to talk to your agents
 icon: "LuMessageSquare"
 ---
