--- a/agents-docs/content/docs/visual-builder/credentials.mdx
+++ b/agents-docs/content/docs/visual-builder/credentials.mdx
@@ -1,5 +1,5 @@
 ---
-title: Credentials
+title: Credentials | Visual Builder
 description: Credentials are used to authenticate MCP servers.
 icon: "LuKey"
 ---
