--- a/agents-docs/content/docs/community/contributing/overview.mdx
+++ b/agents-docs/content/docs/community/contributing/overview.mdx
@@ -1,5 +1,5 @@
 ---
-title: Overview
+title: Overview | Contributing
 description: How to contribute to the Inkeep Agent Framework
 icon: "LuGitPullRequest"
 ---
