--- a/agents-docs/content/docs/typescript-sdk/data-components.mdx
+++ b/agents-docs/content/docs/typescript-sdk/data-components.mdx
@@ -1,5 +1,5 @@
 ---
-title: Data Components
+title: Data Components | Typescript SDK
 description: Learn how to create and use data components for rich agent responses
 icon: "LuLayoutTemplate"
 ---
