--- a/agents-docs/content/docs/visual-builder/mcp-servers.mdx
+++ b/agents-docs/content/docs/visual-builder/mcp-servers.mdx
@@ -1,5 +1,5 @@
 ---
-title: MCP Servers
+title: MCP Servers | Visual Builder
 description: Create MCP servers that agents can use to access external services.
 icon: "LuServer"
 ---
