--- a/agents-docs/content/docs/typescript-sdk/configuration.mdx
+++ b/agents-docs/content/docs/typescript-sdk/configuration.mdx
@@ -12,7 +12,36 @@ Inkeep Agent projects use a hierarchical configuration system that combines file
 
 ### `inkeep.config.ts`
 
-The primary configuration file for your project:
+The primary configuration file for your project. Supports both nested (recommended) and flat configuration formats:
+
+#### Nested Format (Recommended)
+
+```typescript
+import { defineConfig } from '@inkeep/agents-cli/config';
+import 'dotenv/config';
+
+export default defineConfig({
+  // Required: Your tenant identifier
+  tenantId: 'my-company',
+
+  // Management API configuration
+  agentsManageApi: {
+    url: 'http://localhost:3002',
+    apiKey: process.env.MANAGE_API_KEY, // Optional: API key for authentication
+  },
+
+  // Runtime API configuration
+  agentsRunApi: {
+    url: 'http://localhost:3003',
+    apiKey: process.env.RUN_API_KEY, // Optional: API key for authentication
+  },
+
+  // Optional: Output directory for generated files
+  outputDirectory: './output',
+});
+```
+
+#### Flat Format (Legacy, Backward Compatible)
 
 ```typescript
 import { defineConfig } from '@inkeep/agents-cli/config';
@@ -21,26 +50,39 @@ export default defineConfig({
   // Required: Your tenant identifier
   tenantId: 'my-company',
 
-
-  // API endpoints
+  // API endpoints (legacy format)
   agentsManageApiUrl: 'http://localhost:3002',
   agentsRunApiUrl: 'http://localhost:3003',
-
-  // Optional: Advanced settings
-  apiTimeout: 30000,
-  retryAttempts: 3,
 });
 ```
 
 ### Configuration Options
+
+#### Nested Format Options
+
+| Option | Type | Description | Default |
+|--------|------|-------------|---------|
+| `tenantId` | `string` | **Required.** Unique identifier for your tenant | - |
+| `agentsManageApi` | `object` | Management API configuration | - |
+| `agentsManageApi.url` | `string` | Management API endpoint URL | `'http://localhost:3002'` |
+| `agentsManageApi.apiKey` | `string` | Optional API key for Management API authentication | - |
+| `agentsRunApi` | `object` | Runtime API configuration | - |
+| `agentsRunApi.url` | `string` | Runtime API endpoint URL | `'http://localhost:3003'` |
+| `agentsRunApi.apiKey` | `string` | Optional API key for Runtime API authentication | - |
+| `outputDirectory` | `string` | Output directory for generated files | - |
+| `manageUiUrl` | `string` | Optional Management UI URL | `'http://localhost:3000'` |
+
+#### Flat Format Options (Legacy)
 
 | Option | Type | Description | Default |
 |--------|------|-------------|---------|
 | `tenantId` | `string` | **Required.** Unique identifier for your tenant | - |
 | `agentsManageApiUrl` | `string` | Management API endpoint | `'http://localhost:3002'` |
 | `agentsRunApiUrl` | `string` | Runtime API endpoint | `'http://localhost:3003'` |
-| `apiTimeout` | `number` | API request timeout (ms) | `30000` |
-| `retryAttempts` | `number` | Number of retry attempts | `3` |
+| `outputDirectory` | `string` | Output directory for generated files | - |
+| `manageUiUrl` | `string` | Optional Management UI URL | `'http://localhost:3000'` |
+
+**Note:** API keys should be provided via the config file (using environment variables) rather than using legacy `INKEEP_AGENTS_*_BYPASS_SECRET` environment variables.
 
 ## Config File Discovery
 
@@ -144,8 +186,6 @@ inkeep push
 | `INKEEP_AGENTS_MANAGE_API_URL` | `agentsManageApiUrl` | Management API URL |
 | `INKEEP_AGENTS_RUN_API_URL` | `agentsRunApiUrl` | Runtime API URL |
 | `INKEEP_ENV` | - | Environment name for credential loading |
-| `INKEEP_AGENTS_MANAGE_API_BYPASS_SECRET` | - | Optional API bypass token |
-| `INKEEP_AGENTS_RUN_API_BYPASS_SECRET` | - | Optional API bypass token |
 
 ### 3. Config File Values
 
@@ -340,14 +380,68 @@ export default defineConfig({
   tenantId: 'acme-corp-prod',
 
   // Use staging API for development
-  agentsManageApiUrl: process.env.NODE_ENV === 'development'
-    ? 'https://api-staging.acme.com'
-    : 'https://api.acme.com',
+  agentsManageApi: {
+    url: process.env.NODE_ENV === 'development'
+      ? 'https://api-staging.acme.com'
+      : 'https://api.acme.com',
+    apiKey: process.env.MANAGE_API_KEY,
+  },
 
-  // Longer timeout for large deployments
-  apiTimeout: 60000,
+  agentsRunApi: {
+    url: process.env.NODE_ENV === 'development'
+      ? 'https://run-staging.acme.com'
+      : 'https://run.acme.com',
+    apiKey: process.env.RUN_API_KEY,
+  },
 });
 ```
+
+## Migration Guide
+
+### Migrating from Flat to Nested Format
+
+If you're using the legacy flat format, here's how to migrate to the new nested format:
+
+**Before (Flat Format):**
+```typescript
+import { defineConfig } from '@inkeep/agents-cli/config';
+
+export default defineConfig({
+  tenantId: 'my-tenant',
+  agentsManageApiUrl: 'http://localhost:3002',
+  agentsRunApiUrl: 'http://localhost:3003',
+});
+```
+
+**After (Nested Format):**
+```typescript
+import { defineConfig } from '@inkeep/agents-cli/config';
+import 'dotenv/config';
+
+export default defineConfig({
+  tenantId: 'my-tenant',
+  agentsManageApi: {
+    url: 'http://localhost:3002',
+    // Optional: Add API key for authentication
+    apiKey: process.env.MANAGE_API_KEY,
+  },
+  agentsRunApi: {
+    url: 'http://localhost:3003',
+    // Optional: Add API key for authentication
+    apiKey: process.env.RUN_API_KEY,
+  },
+});
+```
+
+**Benefits of the Nested Format:**
+- **Explicit API Key Management**: Store API keys directly in config (via environment variables) with clear, organized structure
+- **Better Organization**: Related configuration grouped together
+- **Type Safety**: Improved IntelliSense and type checking
+- **Future-Proof**: New API configuration options can be added without cluttering the top-level config
+- **Cleaner Environment**: No need for legacy `INKEEP_AGENTS_*_BYPASS_SECRET` environment variables
+
+**Backward Compatibility:**
+The CLI fully supports both formats. You can continue using the flat format without any changes, or migrate at your convenience.
 
 ## Troubleshooting
 
