--- a/agents-docs/content/docs/typescript-sdk/create-mcp-servers.mdx
+++ b/agents-docs/content/docs/typescript-sdk/create-mcp-servers.mdx
@@ -29,7 +29,7 @@ Vercel provides a [Next.js MCP template](https://vercel.com/templates/next.js/mo
 Vercel's template provides:
 - **Easy to deploy** staging environments
 - **Serverless deployment** for automatic scaling with Vercel Functions
-- **SSE transport** for eal-time streaming (requires Redis for state management)
+- **SSE transport** for real-time streaming (requires Redis for state management)
 - **Next.js integration** so MCPs can be added as part of existing Next.js apps
 
 #### Quick start
